--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-  "name": "wppconnect-server-docker",
+  "name": "cedbrasil-bot",
   "version": "1.0.0",
-  "private": true,
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "@wppconnect/server": "^2.8.6",
-    "@babel/runtime": "^7.27.0",
-    "prom-client": "^14.2.0"
+    "@hapi/boom": "^10.0.1",
+    "@whiskeysockets/baileys": "^6.7.18",
+    "csv-parse": "^5.6.0",
+    "express": "^4.18.2",
+    "multer": "^2.0.1",
+    "qrcode": "^1.5.4",
+    "xlsx": "^0.18.5"
   }
 }
